--- a/package.json
+++ b/package.json
@@ -9,14 +9,28 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@firebase/firestore": "^3.7.2",
+    "@heroicons/react": "^1.0.6",
     "@types/node": "18.11.9",
     "@types/react": "18.0.25",
     "@types/react-dom": "18.0.8",
     "eslint": "8.27.0",
     "eslint-config-next": "13.0.2",
+    "firebase": "^9.13.0",
     "next": "13.0.2",
+    "next-firebase": "^1.1.1",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.6.0",
+    "recoil": "^0.7.6",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "typescript": "4.8.4"
+  },
+  "devDependencies": {
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.18",
+    "tailwind-scrollbar": "^2.0.1",
+    "tailwindcss": "^3.2.2",
+    "tailwindcss-textshadow": "^2.1.3"
   }
 }
